<resources>
    <string name="app_name">CoachRegi</string>
    <string name="action_settings">Settings</string>
    <string name="Login"></string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="conpass">Confirm Password</string>
    <string name="signupfin">Sign Up</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string-array name="bloodarray">
        <item>Choose Blood Group</item>
        <item>B+</item>
        <item>AB+</item>
        <item>A+</item>
        <item>O+</item>
        <item>B-</item>
        <item>AB-</item>
        <item>A-</item>
        <item>O-</item>
    </string-array>
    <string-array name="batarray">
        <item>Select Batting Hand</item>

        <item>LEFT</item>
        <item>RIGHT</item>

        <item>Undefined</item>
    </string-array>
    <string-array name="bwlarray">
        <item>Select Bowling Type</item>

        <item>LEFT</item>
        <item>RIGHT</item>

        <item>Undefined</item>
    </string-array>
    <string-array name="bwlproarray">
        <item>Bowling Proficiency</item>

        <item>Medium Pace</item>
        <item>Off Spinner</item>
        <item>Fast Bowler</item>
        <item>Leg Spinner</item>
        <item>Undefined</item>

    </string-array>
    <string-array name="wkcp">
        <item>Wicket Keeping</item>

        <item>YES</item>
        <item>NO</item>
    </string-array>

    <string name="bl">Choose Blood Group</string>
    <string name="bat">Batting Stype</string>

    <string name="title_activity_registration_desk">Registration Desk</string>
    <string name="personalsec">Personal Details</string>
    <string name="firstname">First Name</string>
    <string name="middlename">Middle Name</string>
    <string name="lastname">Last Name</string>
    <string name="dob">Date Of Birth</string>
    <string name="placeofbirth">Place Of Birth</string>
    <string name="certificatedetail">Certificate Details</string>
    <string name="fatname">Fathers Name</string>
    <string name="motname">Mothers Name</string>
    <string name="residentsec">Residential &amp; Communication Details</string>
    <string name="add1">Address(Flat/House No., Road/Street)</string>
    <string name="add2">Address Line 2</string>
    <string name="add3">Address Line 3</string>
    <string name="dist">District</string>
    <string name="phone">Phone</string>
    <string name="mobile">Mobile</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="email">E-Mail</string>
    <string name="log">Log In</string>
    <string name="signup">Or Sign Up Here</string>
    <string name="playerdetailsec">Player Details</string>
    <string name="batstyle">Batting Hand</string>
    <string name="bowlstyle">Bowling Hand</string>
    <string name="typebowl">Proficiency In Bowling</string>
    <string name="wk">Wicket Keeping</string>
    <string name="bloodgrp">Blood Group</string>
    <string name="dec">declaration what so ever it is</string>
    <string name="save">Register</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_scrolling">Player Dashborad</string>
    <string name="rst">Reset</string>
    <string name="age">Age</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_registration_final">Registration Form</string>
    <string name="tel">Telephone (Residential)</string>
    <string name="title_activity_testimg">testimg</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_profile">profile</string>
    <string name="logout">Logout</string>

    <string name="title_activity_start">start</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_options_drawer">OptionsDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
