<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="coach.panwar.com.coachregi.RegistrationFinal"
    tools:showIn="@layout/activity_registration_final">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"



        tools:context="coach.panwar.com.coachregi.RegistrationDesk"
        tools:showIn="@layout/activity_registration_desk"
        android:weightSum="1">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/imageView1"
            android:visibility="visible" />

        <TextView
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/uidfield"
            android:layout_gravity="center_horizontal" />


        <EditText
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/firstname"
            android:ems="10"
            android:id="@+id/editText14"
            android:paddingTop="20dp" />



        <EditText
            android:layout_margin="5dp"
            android:layout_width="383dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/lastname"
            android:ems="10"
            android:id="@+id/editText17"


             />

        <EditText
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:hint="@string/dob"
            android:id="@+id/editText18"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText19"
            android:hint="@string/placeofbirth"
            android:layout_gravity="center_horizontal"
            android:inputType="text" />

        <EditText
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"

            android:ems="10"
            android:hint="@string/fatname"
            android:id="@+id/editText20"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:hint="@string/motname"
            android:id="@+id/editText21"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="AGE"
            android:id="@+id/textView21"
            android:layout_gravity="center_horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />

        <EditText
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:hint="@string/add1"
            android:id="@+id/editText22"
            android:layout_gravity="center_horizontal"
            android:paddingTop="10dp" />

        <EditText
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"

            android:hint="@string/city"
            android:ems="10"
            android:id="@+id/editText23"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"

            android:singleLine="true"
            android:hint="@string/dist"
            android:ems="10"
            android:id="@+id/editText24"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"

            android:singleLine="true"
            android:hint="@string/state"
            android:ems="10"
            android:id="@+id/editText25"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:hint="@string/mobile"
            android:id="@+id/editText26"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:hint="@string/tel"
            android:id="@+id/editText27"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:hint="@string/email"
            android:id="@+id/editText28"
            android:singleLine="true"
            android:layout_gravity="center_horizontal" />
        <EditText
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:hint="Enter Your password"
            android:layout_height="wrap_content"
            android:id="@+id/passuser"/>
        <EditText
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:hint="Confirm Password"
            android:layout_height="wrap_content"
            android:id="@+id/conpassuser"/>
        <Spinner

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bld"
            android:entries="@array/bloodarray"
            android:prompt="@string/bl"

            android:layout_marginTop="5dp"
            android:layout_margin="5dp"
            android:spinnerMode="dialog">

        </Spinner>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bat"
            android:entries="@array/batarray"
            android:prompt="@string/batstyle"
            android:spinnerMode="dialog"

            android:layout_marginTop="5dp"
            android:layout_margin="5dp">

        </Spinner>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bwl"
            android:entries="@array/bwlarray"
            android:prompt="@string/bowlstyle"
            android:spinnerMode="dialog"

            android:layout_marginTop="5dp"
            android:layout_margin="5dp">

        </Spinner>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bwlpro"
            android:entries="@array/bwlproarray"
            android:prompt="@string/typebowl"
            android:spinnerMode="dialog"

            android:layout_marginTop="5dp"
            android:layout_margin="5dp">

        </Spinner>
        <Spinner
            android:layout_marginTop="5dp"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/wck"
            android:entries="@array/wkcp"

            android:spinnerMode="dialog">

        </Spinner>

        <Button

            android:layout_margin="10dp"

            android:background="@android:color/holo_green_light"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/button3"
            android:layout_gravity="center_horizontal" />


    </LinearLayout>




</android.support.v4.widget.NestedScrollView>
