<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"



    tools:context="coach.panwar.com.coachregi.RegistrationDesk"
    tools:showIn="@layout/activity_registration_desk"
>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personalsec"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstname"
        android:id="@+id/textView2"
        android:layout_alignBottom="@+id/editText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_below="@+id/textView"
        android:layout_toRightOf="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/middlename"
        android:id="@+id/textView3"
        android:paddingTop="25dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
         />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText2"
        android:paddingTop="5dp"
        android:layout_above="@+id/editText3"
        android:layout_toRightOf="@+id/textView"
        android:layout_alignRight="@+id/editText"
        android:layout_alignEnd="@+id/editText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lastname"
        android:id="@+id/textView4"
        android:paddingTop="15dp"
        android:layout_alignBottom="@+id/editText3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
         />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText3"
        android:layout_alignRight="@+id/editText2"
        android:layout_alignEnd="@+id/editText2"
        android:layout_alignLeft="@+id/editText2"
        android:layout_alignStart="@+id/editText2"
        android:layout_below="@+id/textView3"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dob"
        android:id="@+id/textView6"
        android:layout_alignBottom="@+id/editText4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"

        android:id="@+id/editText4"
        android:layout_below="@+id/textView4"
        android:layout_toRightOf="@+id/textView"
        android:layout_alignRight="@+id/editText3"
        android:layout_alignEnd="@+id/editText3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeofbirth"
        android:id="@+id/textView5"
        android:layout_alignBottom="@+id/editText5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText5"
        android:layout_below="@+id/textView6"
        android:layout_alignLeft="@+id/editText4"
        android:layout_alignStart="@+id/editText4"
        android:layout_alignRight="@+id/editText4"
        android:layout_alignEnd="@+id/editText4"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fatname"
        android:id="@+id/textView7"
        android:layout_alignBottom="@+id/editText6"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignEnd="@+id/textView3"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"

        android:ems="10"
        android:id="@+id/editText6"
        android:layout_below="@+id/editText5"
        android:layout_alignLeft="@+id/editText5"
        android:layout_alignStart="@+id/editText5"
        android:layout_alignRight="@+id/editText5"
        android:layout_alignEnd="@+id/editText5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/motname"
        android:id="@+id/textView8"
        android:layout_alignBottom="@+id/editText7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText7"
        android:layout_below="@+id/editText6"
        android:layout_toRightOf="@+id/textView"
        android:layout_alignRight="@+id/editText6"
        android:layout_alignEnd="@+id/editText6"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/residentsec"
        android:id="@+id/textView9"
        android:layout_below="@+id/textView8"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add1"
        android:id="@+id/textView10"
        android:layout_alignBottom="@+id/editText8"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText8"
        android:layout_below="@+id/textView9"
        android:layout_alignRight="@+id/editText7"
        android:layout_alignEnd="@+id/editText7"
        android:layout_alignLeft="@+id/editText7"
        android:layout_alignStart="@+id/editText7"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add2"
        android:id="@+id/textView11"
        android:layout_alignBottom="@+id/editText9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
         />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText9"
        android:layout_below="@+id/textView10"
        android:layout_alignLeft="@+id/editText8"
        android:layout_alignStart="@+id/editText8"
        android:layout_alignRight="@+id/editText8"
        android:layout_alignEnd="@+id/editText8"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:id="@+id/textView12"
        android:layout_alignBottom="@+id/editText10"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText10"
        android:layout_below="@+id/textView11"
        android:layout_alignLeft="@+id/editText9"
        android:layout_alignStart="@+id/editText9"
        android:layout_alignRight="@+id/editText9"
        android:layout_alignEnd="@+id/editText9"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dist"
        android:id="@+id/textView13"
        android:layout_alignBottom="@+id/editText11"
        android:layout_alignLeft="@+id/textView12"
        android:layout_alignStart="@+id/textView12"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText11"
        android:layout_below="@+id/editText10"
        android:layout_alignRight="@+id/editText10"
        android:layout_alignEnd="@+id/editText10"
        android:layout_alignLeft="@+id/editText10"
        android:layout_alignStart="@+id/editText10" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/state"
        android:id="@+id/textView14"
        android:layout_alignBottom="@+id/editText12"
        android:layout_alignLeft="@+id/textView13"
        android:layout_alignStart="@+id/textView13" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText12"
        android:layout_below="@+id/editText11"
        android:layout_alignLeft="@+id/editText10"
        android:layout_alignStart="@+id/editText10"
        android:layout_toRightOf="@+id/textView5"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobile"
        android:id="@+id/textView17"

        android:layout_alignBottom="@+id/editText15"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/editText15"
        android:layout_below="@+id/editText12"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/editText12"
        android:layout_alignStart="@+id/editText12" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:id="@+id/textView18"
        android:layout_alignBottom="@+id/editText16"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText16"
        android:layout_below="@+id/editText15"
        android:layout_alignLeft="@+id/editText15"
        android:layout_alignStart="@+id/editText15"
        android:layout_alignRight="@+id/editText15"
        android:layout_alignEnd="@+id/editText15" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bloodgrp"
        android:id="@+id/textView19"
        android:layout_alignTop="@+id/spinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="25dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:entries="@array/bloodarray"
        android:layout_below="@+id/editText16"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:spinnerMode="dropdown"
        android:layout_alignLeft="@+id/editText16"
        android:layout_alignStart="@+id/editText16" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/button"
        android:layout_below="@+id/spinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/button2"
        android:layout_below="@+id/spinner"
        android:layout_alignRight="@+id/spinner"
        android:layout_alignEnd="@+id/spinner" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/textView20"
        android:layout_below="@+id/textView19"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner3"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
</ScrollView>